REGRESSION(265615@main): <attachment> icon is stretched https://bugs.webkit.org/show_bug.cgi?id=258832 rdar://111697949
Reviewed by Wenson Hsieh.

Using <img> by default will stretch the icon, adding `object-fit: contain` makes sure the original image aspect ratio is honored, restoring the old behavior.

* Source/WebCore/html/shadow/attachmentElementShadow.css:
(img#attachment-icon):

Canonical link: https://commits.webkit.org/265742@main

--- a/Source/WebCore/html/shadow/attachmentElementShadow.css
+++ b/Source/WebCore/html/shadow/attachmentElementShadow.css
@@ -73,6 +73,7 @@ img#attachment-icon {
     width: 52px;
     height: 52px;
 #endif
+    object-fit: contain;
     overflow: hidden;
 }
 
